@@ -18,7 +18,10 @@ tzsetup (0.1) UNRELEASED; urgency=low
     Closes: #21698
   * No more dual timezone selection methods, now there's only one.
     Closes: #274617
-  * Add a customised list for Argintina, omitting the junk from zone.tab.
+  * No more question for Argintina, which has only one modern time zone.
     Closes: #283149
+  * No more question for Great Britian, which also has only one modern
+    time zone.
+  * Add a README.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 24 Jul 2005 17:30:56 -0400
